feat: Update README, add colab badge

--- a/AniVoiceChanger_colab.ipynb
+++ b/AniVoiceChanger_colab.ipynb
@@ -1,6 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/SociallyIneptWeeb/AniVoiceChanger/blob/main/AniVoiceChanger_colab.ipynb)"
+      ],
+      "metadata": {
+        "id": "wEsZxTheMO8_"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
