feat: default audio device selection

--- a/AniVoiceChanger_colab.ipynb
+++ b/AniVoiceChanger_colab.ipynb
@@ -181,9 +181,9 @@
       "outputs": [],
       "source": [
         "#@title Manually back up the trained model files to Google Drive for Mode: \"Training\"\n",
-        "#@markdown You need to check the file name of the model under the logs/EXPERIMENT_NAME folder by yourself, and manually modify the model name and epoch number below.\n",
+        "#@markdown MODELNAME should be the EXPERIMENT_NAME that you typed.\n",
         "\n",
-        "#@markdown If the name of the model in logs/EXPERIMENT_NAME folder is D_2333333.pth, set the MODELNAME: john and MODELEPOCH: 2333333\n",
+        "#@markdown If the name of the model is john, and in the logs/john folder is a file called D_2333333.pth, set the MODELNAME: john and MODELEPOCH: 2333333\n",
         "\n",
         "if MODE == 'Training':\n",
         "\n",
