fix: Update colab notebook

--- a/AniVoiceChanger_colab.ipynb
+++ b/AniVoiceChanger_colab.ipynb
@@ -189,20 +189,21 @@
         "\n",
         "#@markdown Model name\n",
         "  MODELNAME = \"\"  #@param {type:\"string\"}\n",
+        "  if MODELNAME:\n",
         "#@markdown Epoch number\n",
-        "  MODELEPOCH = 2333333  #@param {type:\"integer\"}\n",
+        "    MODELEPOCH = 2333333  #@param {type:\"integer\"}\n",
         "#@markdown Save intermediate models if you would like to continue training the model later\n",
-        "  SAVE_INTERMEDIATE = True  #@param {type:\"boolean\"}\n",
+        "    SAVE_INTERMEDIATE = True  #@param {type:\"boolean\"}\n",
         "\n",
-        "  !mkdir -p /content/drive/MyDrive/{MODELNAME}_files\n",
+        "    !mkdir -p /content/drive/MyDrive/{MODELNAME}_files\n",
         "\n",
-        "  if SAVE_INTERMEDIATE:\n",
-        "    !cp /content/logs/{MODELNAME}/G_{MODELEPOCH}.pth /content/drive/MyDrive/{MODELNAME}_files/\n",
-        "    !cp /content/logs/{MODELNAME}/D_{MODELEPOCH}.pth /content/drive/MyDrive/{MODELNAME}_files/\n",
-        "    !cp /content/logs/{MODELNAME}/total_*.npy /content/drive/MyDrive/{MODELNAME}_files/\n",
+        "    if SAVE_INTERMEDIATE:\n",
+        "      !cp /content/logs/{MODELNAME}/G_{MODELEPOCH}.pth /content/drive/MyDrive/{MODELNAME}_files/\n",
+        "      !cp /content/logs/{MODELNAME}/D_{MODELEPOCH}.pth /content/drive/MyDrive/{MODELNAME}_files/\n",
+        "      !cp /content/logs/{MODELNAME}/total_*.npy /content/drive/MyDrive/{MODELNAME}_files/\n",
         "\n",
-        "  !cp /content/logs/{MODELNAME}/added_*.index /content/drive/MyDrive/{MODELNAME}_files/\n",
-        "  !cp /content/weights/{MODELNAME}.pth /content/drive/MyDrive/{MODELNAME}_files/"
+        "    !cp /content/logs/{MODELNAME}/added_*.index /content/drive/MyDrive/{MODELNAME}_files/\n",
+        "    !cp /content/weights/{MODELNAME}.pth /content/drive/MyDrive/{MODELNAME}_files/"
       ]
     },
     {
@@ -211,6 +212,8 @@
         "# Inference\n",
         "\n",
         "The code below is to be run for Mode: Inference\n",
+        "\n",
+        "When prompted `Proceed (Y/n)?`, click beside it, type `Y` and press `Enter`.\n",
         "\n",
         "If `WARNING: The following packages were previously imported in this runtime: [numpy] You must restart the runtime in order to use newly installed versions.` is seen in the output, click `Restart Runtime` and then continue running the next cell."
       ],
@@ -222,8 +225,9 @@
       "cell_type": "code",
       "source": [
         "#@title Install specific numpy version. If needed, click Restart Runtime before running the bottom two cells.\n",
-        "!pip uninstall numpy\n",
-        "!pip install numpy==1.23.5"
+        "if MODE == 'Inference':\n",
+        "  !pip uninstall numpy\n",
+        "  !pip install numpy==1.23.5"
       ],
       "metadata": {
         "id": "cfJV7kbKqtnw",
@@ -235,11 +239,17 @@
     {
       "cell_type": "code",
       "source": [
+        "try:\n",
+        "  MODE\n",
+        "except NameError:\n",
+        "  MODE = 'Inference'\n",
+        "\n",
         "#@title Set your NGROK_AUTH_TOKEN.\n",
-        "!pip install flask-ngrok2 -q\n",
+        "if MODE == 'Inference':\n",
+        "  !pip install flask-ngrok2 -q\n",
         "\n",
         "#@markdown Obtain your Ngrok auth token from [here](https://dashboard.ngrok.com/get-started/your-authtoken)\n",
-        "NGROK_AUTH_TOKEN = '' #@param {type:\"string\"}"
+        "  NGROK_AUTH_TOKEN = '' #@param {type:\"string\"}"
       ],
       "metadata": {
         "id": "OL-1YvcbOiWd",
@@ -251,6 +261,10 @@
     {
       "cell_type": "code",
       "source": [
+        "if MODE != 'Inference':\n",
+        "  raise Exception('Mode is not set to Inference.')\n",
+        "\n",
+        "\n",
         "#@title Run RVC Inference server\n",
         "import json\n",
         "import sys\n",
